<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.screen.fragment.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/headText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/greetingsHead"
            android:textColor="@color/navTextColor"
            android:textSize="26sp"
            android:textStyle="bold"
            tools:text="What do you wanna try today?" />

        <TextView
            android:id="@+id/subText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/greetingsSub"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:text="Get started with cooking" />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/homeSearchView"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/searchview_bg"
            android:elevation="2dp"
            android:paddingHorizontal="12dp"
            android:iconifiedByDefault="false"
            android:queryBackground="@android:color/transparent"
            android:queryHint="Search Recipe..." />

        <FrameLayout
            android:id="@+id/quickSearchFragmentContainerH"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            tools:layout="@layout/fragment_quick_search"
            app:layout_constraintTop_toBottomOf="@id/homeSearchView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <LinearLayout
            android:id="@+id/homeRecommendation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/homeRecommendationNav"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/recommendationTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/recommendationText"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:text="Recommendation" />

                <TextView
                    android:id="@+id/recommendationSeeMore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/seeMoreText"
                    android:textColor="#9C27B0"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:text="See More" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recommendationRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="3"
                tools:listitem="@layout/item_recipe_card" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/homePopular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/homePopularNav"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/popularTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/popularText"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:text="Popular" />

                <TextView
                    android:id="@+id/popularSeeMore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/seeMoreText"
                    android:textColor="#9C27B0"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:text="See More" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/popularRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:clipToPadding="false"
                android:nestedScrollingEnabled="false"
                android:orientation="horizontal"
                android:paddingHorizontal="20dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:spanCount="2"
                tools:itemCount="3"
                tools:listitem="@layout/item_recipe_card" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>