<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.screen.fragment.SavedFragment">

    <SearchView
        android:id="@+id/savedSearchView"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/searchview_bg"
        android:queryHint="Search Recipe..."
        android:iconifiedByDefault="false"
        android:elevation="2dp"
        android:queryBackground="@android:color/transparent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="12dp"
        android:clickable="true"
        android:contentDescription="@string/floatingDescription"
        android:src="@drawable/drawable_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="RtlHardcoded" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/savedSearchView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/collectionSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="16dp"
                android:paddingBottom="8dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/collectionHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="20dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?attr/selectableItemBackground">

                    <TextView
                        android:id="@+id/collectionTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/collectionText"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"
                        app:layout_constraintStart_toEndOf="@+id/collectionIcon"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginStart="8dp" />

                    <ImageView
                        android:id="@+id/collectionIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/drawable_saved_fav"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:contentDescription="@string/collectionIcon" />

                    <ImageView
                        android:id="@+id/collectionIndicator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/drawable_down_arrow"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:contentDescription="@string/expandIndicator" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/collectionRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:paddingHorizontal="12dp"
                    android:layout_marginTop="8dp"
                    android:nestedScrollingEnabled="false"
                    android:background="@drawable/recycler_view_bg"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="2"
                    tools:itemCount="4"
                    tools:visibility="visible"
                    tools:listitem="@layout/item_recipe_card" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/myRecipeSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="16dp"
                android:paddingBottom="8dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/myRecipeHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="20dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?attr/selectableItemBackground">

                    <TextView
                        android:id="@+id/myRecipeTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/myRecipeText"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"
                        app:layout_constraintStart_toEndOf="@+id/myRecipeIcon"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginStart="8dp" />

                    <ImageView
                        android:id="@+id/myRecipeIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/drawable_chef_hat"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:contentDescription="@string/myRecipeIcon" />

                    <ImageView
                        android:id="@+id/myRecipeIndicator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/drawable_down_arrow"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:contentDescription="@string/expandIndicator" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/myRecipeRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:paddingHorizontal="12dp"
                    android:layout_marginTop="8dp"
                    android:nestedScrollingEnabled="false"
                    android:background="@drawable/recycler_view_bg"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="2"
                    tools:itemCount="2"
                    tools:visibility="visible"
                    tools:listitem="@layout/item_recipe_card" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="80dp" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>